<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">贴心助理</string>
    <string name="tip">提示</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string-array name="system_menu">
        <item>Target Manage</item>
        <item>Affair Plan</item>
        <item>TodaySchedule</item>
        <item>Four Classes</item>
        <item>Some Tools</item>
        <item>System Setting</item>
    </string-array>
    <string-array name="system_setting">
        <item>设置提示的周期类型</item>
    </string-array>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_login">Login</string>
    <string name="signup_label">Sign Up</string>
    <string name="welcome_image_desc">Welcoome Page</string>
    <string name="main_head">User Head Picture</string>
    <string name="main_btn_login">Login</string>
    <string name="main_btn_logout">Logout</string>
    <string name="main_btn_register">Register</string>
    <string name="main_btn_exit">Exit</string>
    <!-- main_affair_plan -->

    <string name="important">重要</string>
    <string name="urgency">紧急</string>
    <!-- main_some_tools -->
    <string name="main_some_tools_weather">天气</string>
    <string name="main_some_tools_note">便签</string>
    <string name="main_some_tools_calendar">日历</string>
    <string name="main_some_tools_countdown">倒计时</string>
    <string name="main_some_tools_alarm">闹钟</string>

    <!-- main_some_tools_weather -->
    <string name="main_some_tools_weather_chuanyi">穿衣</string>
    <string name="main_some_tools_weather_index">各种指标</string>
    <string name="main_some_tools_weather_xiche">洗车</string>
    <string name="main_some_tools_weather_lvyou">旅游</string>
    <string name="main_some_tools_weather_ganmao">感冒</string>
    <!-- main_target_manage -->
    <string name="please_input_scryed">请输入分身</string>

    <!-- main_some_tools_alarm -->
    <string name="alarm_option_title">更新闹钟</string>
	<!-- modules -->
	<string name="update_memo">更新便签</string>
    <string-array name="cityarray">
        <item>北京</item>
        <item>江苏</item>
        <item>浙江</item>
        <item>上海</item>
    </string-array>

    <!-- system setting -->
    <string name="add_type">添加周期类型</string>
    <string name="add_affair_plan">添加事务计划</string>

    <string-array name="date_type">
        <item>小时</item>
        <item>天</item>
        <item>周</item>
        <item>月</item>
        <item>季度</item>
        <item>年</item>
    </string-array>

    <string name="minute">分</string>
    <string name="hour">小时</string>
    <string name="day">天</string>
    <string name="week">周</string>
    <string name="month">月</string>
    <string name="quater">季度</string>
    <string name="year">年</string>
    <!-- common -->
    <string name="title">标题:</string>
    <string name="content">内容:</string>
    <string name="cycle">周期:</string>
    <string name="remarks">备注:</string>
    <string name="last_tip_time">最近提醒时间:</string>
    <string name="is_tip">是否提示:</string>
    <string name="is_on">是否启用:</string>
    <string name="is_aheadtime">是否提前提醒:</string>
    <string name="add">添加</string>
    <string name="update">修改</string>
    <string name="delete">删除</string>

</resources>