<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/drawerLinear"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/main_image_userhead"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:background="@drawable/main_head"
            android:contentDescription="@string/main_head"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:paddingTop="10dp"
            android:src="@drawable/main_head" >
        </ImageView>

        <ListView
            android:id="@+id/drawerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="5dp"
            android:background="#FFFFFF" >
        </ListView>

        <LinearLayout
            android:id="@+id/drawerButtonGroup"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/main_btn1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/main_btn_exit"
                android:textSize="15sp" >
            </Button>

            <Button
                android:id="@+id/main_btn2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/main_btn_login"
                android:textSize="15sp" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>