<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_some_tools_weather_headpic"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="10dp" >

    <RelativeLayout
        android:id="@+id/affair_plan_item_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/affair_plan_item_left_thingname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#aaaaaa" />

        <CheckBox
            android:id="@+id/affair_plan_item_left_jj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/affair_plan_item_left_thingname"
            android:layout_marginTop="20dp"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/urgency" />

        <CheckBox
            android:id="@+id/affair_plan_item_left_zy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/affair_plan_item_left_jj"
            android:layout_toRightOf="@id/affair_plan_item_left_jj"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/important" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/affair_plan_top_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/affair_plan_item_mid_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/affair_plan_item_mid_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/affair_plan_item_mid_top"
            android:layout_marginTop="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/affair_plan_top_right"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center" >

        <ImageView
            android:id="@+id/affair_plan_scale_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/cycle"
            android:scaleType="centerInside" />
    </RelativeLayout>

</LinearLayout>