<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:layout_weight="1" >
            <ImageButton
                android:id="@+id/main_some_tools_calendar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/main_some_tools_calendar"
                android:background="@drawable/_main_some_tools_calendar"
                android:layout_gravity="center_horizontal" />

            <TextView  android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_some_tools_calendar"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:layout_weight="1" >
            <ImageButton
                android:id="@+id/main_some_tools_note"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/main_some_tools_note"
                android:background="@drawable/_main_some_tools_note"
                android:layout_gravity="center_horizontal" />

            <TextView  android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_some_tools_note"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:layout_weight="1" >
            <ImageButton
                android:id="@+id/main_some_tools_countdown"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/main_some_tools_countdown"
                android:background="@drawable/_main_some_tools_countdown"
                android:layout_gravity="center_horizontal" />

            <TextView  android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_some_tools_countdown"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:layout_weight="1" >
            <ImageButton
                android:id="@+id/main_some_tools_weather"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/main_some_tools_weather"
                android:background="@drawable/_main_some_tools_weather"
                android:layout_gravity="center_horizontal" />

            <TextView  android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_some_tools_weather"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:layout_weight="1" >
            <ImageButton
                android:id="@+id/main_some_tools_alarm"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/main_some_tools_alarm"
                android:background="@drawable/_main_some_tools_alarm"
                android:layout_gravity="center_horizontal" />

            <TextView  android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_some_tools_alarm"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:layout_weight="1" >
            
        </LinearLayout>
    </LinearLayout>
</LinearLayout>